@@ -1,3 +1,13 @@
+2010-01-07  Jan Moringen  <scymtym@users.sourceforge.net>
+
+	Added IRC utility functions in irc/rudel-irc-erc-util.el
+	* irc/Project.ede (target irc): added file rudel-irc-erc-util.el
+	* irc/rudel-irc-erc.el (require rudel-irc-erc-util): required for
+	utility functions
+	(rudel-irc-erc-base): moved to rudel-irc-erc-util.el
+	* irc/rudel-irc-erc-util.el: new file; utility functions for the
+	ERC IRC backend
+
 2010-01-06  Jan Moringen  <scymtym@users.sourceforge.net>
 
 	Initial import of IRC transport backend
